force-app/main/default/objects/Monthly_KPI__c/Monthly_KPI__c.object-meta.xml
<CustomObject>
    <label>Monthly KPI</label>
    <nameField>
        <label>Monthly KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>