force-app/main/default/objects/Monthly_KPI__c/fields/Created_Monthly_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_Monthly_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Monthly Task</label>
    <type>Checkbox</type>
</CustomField>