force-app/main/default/objects/Monthly_KPI__c/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>DODLR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly KPI</relationshipLabel>
    <relationshipName>Monthly_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>