force-app/main/default/objects/Monthly_KPI__c/fields/Is_Calculating__c.field-meta.xml
<CustomField>
    <fullName>Is_Calculating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calculating</label>
    <type>Checkbox</type>
</CustomField>