force-app/main/default/objects/Monthly_KPI__c/fields/Is_Create_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Create Employee</label>
    <type>Checkbox</type>
</CustomField>