force-app/main/default/objects/Monthly_KPI__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>IF( LEN( TEXT(Month__c ) )  = 1, 
     TEXT(Year__c) + &quot;/0&quot; +  TEXT(Month__c ),
     TEXT(Year__c) + &quot;/&quot; +  TEXT(Month__c )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month/ Year</label>
    <type>Text</type>
</CustomField>