force-app/main/default/objects/Monthly_KPI__c/fields/Today_Month__c.field-meta.xml
<CustomField>
    <fullName>Today_Month__c</fullName>
    <formula>MONTH(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>