force-app/main/default/objects/Monthly_KPI__c/fields/Today_Year__c.field-meta.xml
<CustomField>
    <fullName>Today_Year__c</fullName>
    <formula>YEAR(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Year</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>