force-app/main/default/objects/Monthly_KPI__c/validationRules/Is_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(Is_Lock__c) == true,  ISCHANGED(Is_Lock__c) == false)</errorConditionFormula>
    <errorMessage>This Month KPI is locked . Contact admin if you have any problem .</errorMessage>
</ValidationRule>