force-app/main/default/objects/Monthly_KPI__c/listViews/Alls.listView-meta.xml
<ListView>
    <fullName>Alls</fullName>
    <columns>NAME</columns>
    <columns>Is_Lock__c</columns>
    <columns>Month__c</columns>
    <columns>Is_Calculating__c</columns>
    <columns>DO_DL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alls</label>
</ListView>